# Proyecto-1-Breakout

./: CMakeLists.txt  README.md  main.cpp
factory/: BlockFactory.h  CommonBlockFactory.cpp  CommonBlockFactory.h  DeepBlockFactory.cpp  DeepBlockFactory.h  DoubleBlockFactory.cpp  DoubleBlockFactory.h  InnerBlockFactory.cpp  InnerBlockFactory.h  SurpriseBlockFactory.cpp  SurpriseBlockFactory.h  TripleBlockFactory.cpp  TripleBlockFactory.h
objects/: Ball.cpp  Ball.h  Bar.cpp  Bar.h  Block.cpp  Block.h  Object.cpp  Object.h
source/: Game.cpp  Game.h
